--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -152,6 +152,7 @@
     private bool teamsLoaded = false;
     private bool enginesLoaded = false;
     private bool powerLoaded = false;
+    private bool developerLoaded = false;
 
     protected override async Task OnInitializedAsync()
     {
