--- a/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
@@ -23,10 +23,11 @@
 @code {
     [CascadingParameter] public Season Season { get; set; }
 
-    List<SeasonDriver>? SeasonDrivers;
-    List<SeasonTeam>? SeasonTeams;
-    List<SeasonEngine>? SeasonEngines;
-    List<DevelopedEntrant> DevelopedEntrants;
+    [Parameter] public IEnumerable<SeasonEngine> SeasonEngines { get; set; } = Enumerable.Empty<SeasonEngine>();
+    [Parameter] public IEnumerable<SeasonTeam> SeasonTeams { get; set; } = Enumerable.Empty<SeasonTeam>();
+    [Parameter] public IEnumerable<SeasonDriver> SeasonDrivers { get; set; } = Enumerable.Empty<SeasonDriver>();
+    
+    private List<DevelopedEntrant> DevelopedEntrants;
 
     private static readonly DialogOptions SummaryDialogOptions = new()
         {
@@ -34,17 +35,9 @@
             CloseButton = true,
         };
     
-    async Task ShowSummary()
+    private async Task ShowSummary()
     {
         var seasonLog = await _entrantService.GetDevelopmentLog(Season.Id);
-
-        // We directly take data from here so we're going to need it
-        if (SeasonDrivers == null)
-            SeasonDrivers = await _entrantService.GetSeasonDrivers(Season.Id);
-        if (SeasonTeams == null)
-            SeasonTeams = await _entrantService.GetSeasonTeams(Season.Id);
-        if (SeasonEngines == null)
-            SeasonEngines = await _entrantService.GetSeasonEngines(Season.Id);
 
         var summaries = new List<DevelopSummary>();
         foreach (var groupSummary in seasonLog.GroupBy(e => e.EntrantGroup))
@@ -93,9 +86,9 @@
             "Summary development", new DialogParameters { ["Summaries"] = summaries }, SummaryDialogOptions);
     }
 
-    EntrantDevelopLog? CreateDriverLog(long driverId, DevelopmentLog[] logs)
+    private EntrantDevelopLog? CreateDriverLog(long driverId, DevelopmentLog[] logs)
     {
-        var matchingDriver = SeasonDrivers?.Find(e => e.Id == driverId);
+        var matchingDriver = SeasonDrivers?.FirstOrDefault(e => e.Id == driverId);
 
         if (matchingDriver == null)
             return null;
@@ -114,9 +107,9 @@
             };
     }
 
-    EntrantDevelopLog? CreateTeamLog(long teamId, DevelopmentLog[] logs)
+    private EntrantDevelopLog? CreateTeamLog(long teamId, DevelopmentLog[] logs)
     {
-        var matchingTeam = SeasonTeams?.Find(e => e.Id == teamId);
+        var matchingTeam = SeasonTeams?.FirstOrDefault(e => e.Id == teamId);
 
         if (matchingTeam == null)
             return null;
@@ -135,9 +128,9 @@
             };
     }
 
-    EntrantDevelopLog? CreateEngineLog(long engineId, DevelopmentLog[] logs)
+    private EntrantDevelopLog? CreateEngineLog(long engineId, DevelopmentLog[] logs)
     {
-        var matchingEngine = SeasonEngines?.Find(e => e.Id == engineId);
+        var matchingEngine = SeasonEngines?.FirstOrDefault(e => e.Id == engineId);
 
         if (matchingEngine == null)
             return null;
