--- a/SimTECH/SimTECH/Pages/UserManual/Topics/Glossary.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Topics/Glossary.razor
@@ -22,9 +22,11 @@
 @code {
     private static readonly GlossaryItem[] glossaryTerms = new GlossaryItem[]
         {
-            new GlossaryItem("Advance", @"A single round of calculation for every driver during a race.
-                    Equivalent for a certain distance traveled during a race, for which the default is 10km.",
-                    "Calculation"),
+            new GlossaryItem(
+                "Advance",
+                @"A single round of calculation for every driver during a race. Equivalent for a certain distance 
+                    traveled during a race (default is 10km).",
+                "Calculation"),
         };
 
     internal class GlossaryItem
